syntax = "proto3";

import "Protos/V1/Models/DriveModels.proto";

package daisi.protos.v1;

service DrivesProto {
    rpc Upload(stream FileChunk) returns (UploadResponse);
    rpc Download(DownloadRequest) returns (stream FileChunk);
    rpc List(ListFilesRequest) returns (ListFilesResponse);
    rpc Delete(DeleteFileRequest) returns (DeleteFileResponse);
    rpc SearchFiles(FileSearchRequest) returns (FileSearchResponse);
    rpc VectorSearch(VectorSearchRequest) returns (VectorSearchResponse);
    rpc GetStorageLimits(GetStorageLimitsRequest) returns (StorageLimits);
    rpc SetStorageLimits(SetStorageLimitsRequest) returns (SetStorageLimitsResponse);

    // Repository management
    rpc CreateRepository(CreateRepositoryRequest) returns (CreateRepositoryResponse);
    rpc ListRepositories(ListRepositoriesRequest) returns (ListRepositoriesResponse);
    rpc DeleteRepository(DeleteRepositoryRequest) returns (DeleteRepositoryResponse);
    rpc GrantRepositoryAccess(GrantRepositoryAccessRequest) returns (GrantRepositoryAccessResponse);
    rpc RevokeRepositoryAccess(RevokeRepositoryAccessRequest) returns (RevokeRepositoryAccessResponse);

    // Folder management
    rpc CreateFolder(CreateFolderRequest) returns (CreateFolderResponse);
    rpc DeleteFolder(DeleteFolderRequest) returns (DeleteFolderResponse);

    // File operations
    rpc MoveFile(MoveFileRequest) returns (MoveFileResponse);

    // Trash operations
    rpc ListTrash(ListTrashRequest) returns (ListTrashResponse);
    rpc RestoreFromTrash(RestoreFromTrashRequest) returns (RestoreFromTrashResponse);
    rpc EmptyTrash(EmptyTrashRequest) returns (EmptyTrashResponse);

    // File preview
    rpc GetFilePreview(GetFilePreviewRequest) returns (GetFilePreviewResponse);

    // Account drive settings
    rpc GetAccountDriveSettings(GetAccountDriveSettingsRequest) returns (GetAccountDriveSettingsResponse);
    rpc SetAccountDriveSettings(SetAccountDriveSettingsRequest) returns (SetAccountDriveSettingsResponse);
}

message GetStorageLimitsRequest {}

message SetStorageLimitsRequest {
    string AccountId = 1;
    StorageLimits Limits = 2;
}

message SetStorageLimitsResponse {
    bool Success = 1;
}
